# pylibselenium

./: Makefile  README.md  pyproject.toml  setup.py
driver/: __init__.py  client.py  delayer.py  driverinterface.py  options.py  preferences.py  services.py  types.py  wait.py
performance/: performance.py
profile/: client.py
pylibselenium/: __init__.py
pylibselenium/driver/: __init__.py  client.py  delayer.py  directory.py  driverinterface.py  options.py  retry.py  wait.py
pylibselenium/logger/: logger.py
pylibselenium/performance/: measure.py
pylibselenium/profile/: client.py
pylibseleniummanagement/dom/: __init__.py
pylibseleniummanagement/dom/cachedelement/: cachedelement.py
pylibseleniummanagement/dom/locatedwebelement/: __init__.py  locatedwebelement.py
pylibseleniummanagement/driver/: driverinterface.py  retry.py  services.py
